--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
     "name": "backend",
     "version": "1.0.0",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js"
-    },
+    "scripts": {},
     "dependencies": {
         "axios": "^1.4.0",
         "body-parser": "^1.20.2",
