--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "my-recipe-app",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "node generate.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "axios": "^1.4.0",
-    "body-parser": "^1.20.2"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "scripts": {},
+    "dependencies": {
+        "axios": "^1.4.0",
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "express": "^4.18.2"
+    }
 }
